2005-04-18  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-03-30  Michael Koch  <konqueror@gmx.de>

        * gnu/xml/aelfred2/XmlParser.java:
        Revert my typo fix.

2005-04-18  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-03-30  Michael Koch  <konqueror@gmx.de>

        * java/awt/geom/CubicCurve2D.java,
        java/awt/geom/QuadCurve2D.java:
        Fixed typo in name of Brian Cough.

2005-04-18  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/nio/gnu_java_nio_VMSelector.c:
	Re-indented to match GNU Classpath's indentation style more closely.

2005-04-18  Michael Franz  <mvfranz@gmail.com>
	
	* FAQ/FAQ.debugging: Added new informations on how to debug kaffe
	easily.

2005-04-18  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-29  Jeroen Frijters  <jeroen@frijters.net>

        * gnu/classpath/SystemProperties.java (static): Converted encoding
        aliases to lower case and removed redudant aliases.

2005-04-18  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-28  Tom Tromey  <tromey@redhat.com>

        * java/lang/ClassLoader.java (loadClass): Resolve class even if
        it was already found.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-28  Tom Tromey  <tromey@redhat.com>

        * java/net/URL.java (DEFAULT_SEARCH_PATH): Added
        org.metastatic.jessie.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-28  Sven de Marothy  <sven@physto.se>

        * gnu/java/io/decode/DecoderUnicodeBig.java,
        * gnu/java/io/decode/DecoderUnicodeLittle.java,
        * gnu/java/io/encode/EncoderUnicodeBig.java,
        * gnu/java/io/encode/EncoderUnicodeLittle.java:
        New files.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-26  Chris Burdess  <dog@gnu.org>
